Corrected spacing issue in safari on chat with stylist bar in header.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -207,9 +207,9 @@ progress::-moz-progress-bar { background: #E61652; }
 	color: #666666;
     float: left;
     font-size: 14px;
-    margin-right: 3px;
-	margin-top:2px;
-	margin-left:0;
+    margin-right: 1px;
+	margin-top: 2px;
+	margin-left: 0;
 }
 .headerSearchContainer a{
 	color: #E61552;
